[package]
name = "biliup-http"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.5"
uuid = {version = "1.1.2", features = ["v4"]}
biliup = "0.1.9"
log = "0.4"
indicatif = "0.17.0-rc"
bytes  = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
axum-core = "0.2.5"