[package]
name = "biliup-http"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version = "1.1.2", features = ["v4"]}
biliup = "0.1.9"
indicatif = "0.17.0-rc"
bytes  = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }

# 添加arm交叉编译时不使用openssl 更换为rustls-tls
[target.'cfg(any(all(target_arch="aarch64", target_vendor="unknown", target_os="linux"), target_env="musl"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }